--- a/Updated Notebook.ipynb
+++ b/Updated Notebook.ipynb
@@ -74,10 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "id": "24625779",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -479,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "367e7cad",
+   "id": "dffc02ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "id": "4c87107c",
    "metadata": {
     "scrolled": true
@@ -697,11 +706,11 @@
       "Finding t-SNE Embedding for Training Set\n",
       "Finding Distances\n",
       "Computing t-SNE\n",
-      "[t-SNE] Computing 97 nearest neighbors...\n",
-      "[t-SNE] Indexed 211 samples in 0.000s...\n",
-      "[t-SNE] Computed neighbors for 211 samples in 0.006s...\n",
-      "[t-SNE] Computed conditional probabilities for sample 211 / 211\n",
-      "[t-SNE] Mean sigma: 0.121554\n"
+      "[t-SNE] Computing 2 nearest neighbors...\n",
+      "[t-SNE] Indexed 3 samples in 0.000s...\n",
+      "[t-SNE] Computed neighbors for 3 samples in 0.000s...\n",
+      "[t-SNE] Computed conditional probabilities for sample 3 / 3\n",
+      "[t-SNE] Mean sigma: 1125899906842624.000000\n"
      ]
     },
     {
@@ -720,8 +729,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 45.379860\n",
-      "[t-SNE] KL divergence after 1000 iterations: 0.035808\n"
+      "[t-SNE] KL divergence after 250 iterations with early exaggeration: 33.104679\n",
+      "[t-SNE] KL divergence after 950 iterations: 0.000000\n"
      ]
     }
    ],
@@ -2111,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "892ad599",
+   "id": "cdaf5b9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2120,28 +2129,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "5d939f31",
+   "execution_count": 83,
+   "id": "50f26e37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(211, 1)"
+       "(50, 211)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "freqs.shape"
+    "wlets.T.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 84,
    "id": "0a331999",
    "metadata": {},
    "outputs": [
@@ -2151,7 +2160,7 @@
        "'\\n    wlets, freqs = mmpy.findWavelets(projections[0], parameters.pcaModes, parameters.omega0, parameters.numPeriods, parameters.samplingFreq, parameters.maxF, parameters.minF, parameters.numProcessors, parameters.useGPU)\\n    \\n    axes.imshow(wlets.T, cmap=\\'PuRd\\', origin=\\'lower\\')\\n\\n    axes.set_yticks([0,10,20,30,40,50])\\n    axes.set_yticklabels([\\'%0.1f\\'%freqs[j] for j in [0,5,10,15,20,24]])\\n\\n    axes.set_ylabel(\"Frequencies (hz)\", fontsize = 14)\\n    axes.set_xlabel(\\'Timepoints\\', fontsize=14)\\n'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,8 +2172,9 @@
     "    fig, axes = plt.subplots(rows, 2, figsize=(20,50))\n",
     "    \n",
     "    for i in range(len(indx)):\n",
-    "        #wlet, freq = mmpy.findWavelets(projections[indx[i]], parameters.pcaModes, parameters.omega0, parameters.numPeriods, parameters.samplingFreq, parameters.maxF, parameters.minF, parameters.numProcessors, parameters.useGPU)\n",
-    "        \n",
+    "        wlet, freq = mmpy.findWavelets(projections[indx[i]], parameters.pcaModes, parameters.omega0, parameters.numPeriods, parameters.samplingFreq, parameters.maxF, parameters.minF, parameters.numProcessors, parameters.useGPU)\n",
+    "        print(wlet.shape)\n",
+    "        print(freq.shape)\n",
     "        ax1 = plt.subplot2grid((rows, 2), (i, 0))\n",
     "        ax2 = plt.subplot2grid((rows, 2), (i, 1))\n",
     "        plot_stroke(indx[i], ax1)\n",
@@ -2186,8 +2196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "3ff572ac",
+   "execution_count": 85,
+   "id": "7ab30c06",
    "metadata": {},
    "outputs": [
     {
@@ -2195,25 +2205,22 @@
      "output_type": "stream",
      "text": [
       "\t Calculating wavelets, clock starting.\n",
-      "\t Using #12 CPUs.\n"
+      "\t Using #12 CPUs.\n",
+      "\t Done at 30.21 seconds.\n",
+      "(71, 50)\n",
+      "(25,)\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'plot_stroke' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m lindx \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m \u001b[43mstrokes_and_wavelets\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlindx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprojections\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[1;32mIn [33]\u001b[0m, in \u001b[0;36mstrokes_and_wavelets\u001b[1;34m(indx, projections)\u001b[0m\n\u001b[0;32m      4\u001b[0m fig, axes \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(rows, \u001b[38;5;241m2\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m50\u001b[39m))\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(indx)):\n\u001b[1;32m----> 7\u001b[0m     wlet, freq \u001b[38;5;241m=\u001b[39m \u001b[43mmmpy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfindWavelets\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprojections\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindx\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpcaModes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43momega0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumPeriods\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msamplingFreq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmaxF\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mminF\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumProcessors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43museGPU\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m     ax1 \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplot2grid((rows, \u001b[38;5;241m2\u001b[39m), (i, \u001b[38;5;241m0\u001b[39m))\n\u001b[0;32m      9\u001b[0m     ax2 \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplot2grid((rows, \u001b[38;5;241m2\u001b[39m), (i, \u001b[38;5;241m1\u001b[39m))\n",
-      "File \u001b[1;32m~\\MonkeyTestRepo\\motionmapperpy\\wavelet.py:65\u001b[0m, in \u001b[0;36mfindWavelets\u001b[1;34m(projections, pcaModes, omega0, numPeriods, samplingFreq, maxF, minF, numProcessors, useGPU)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     64\u001b[0m     pool \u001b[38;5;241m=\u001b[39m mp\u001b[38;5;241m.\u001b[39mPool(numProcessors)\n\u001b[1;32m---> 65\u001b[0m     amplitudes \u001b[38;5;241m=\u001b[39m \u001b[43mpool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstarmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfastWavelet_morlet_convolution_parallel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     66\u001b[0m \u001b[43m                              \u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprojections\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43momega0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43museGPU\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpcaModes\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     67\u001b[0m     amplitudes \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(amplitudes, \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     68\u001b[0m     pool\u001b[38;5;241m.\u001b[39mclose()\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\multiprocessing\\pool.py:372\u001b[0m, in \u001b[0;36mPool.starmap\u001b[1;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[0;32m    366\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mstarmap\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, iterable, chunksize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m    367\u001b[0m     \u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[0;32m    368\u001b[0m \u001b[38;5;124;03m    Like `map()` method but the elements of the `iterable` are expected to\u001b[39;00m\n\u001b[0;32m    369\u001b[0m \u001b[38;5;124;03m    be iterables as well and will be unpacked as arguments. Hence\u001b[39;00m\n\u001b[0;32m    370\u001b[0m \u001b[38;5;124;03m    `func` and (a, b) becomes func(a, b).\u001b[39;00m\n\u001b[0;32m    371\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[1;32m--> 372\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_map_async\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miterable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstarmapstar\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\multiprocessing\\pool.py:765\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    764\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m--> 765\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    766\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mready():\n\u001b[0;32m    767\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\multiprocessing\\pool.py:762\u001b[0m, in \u001b[0;36mApplyResult.wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    761\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwait\u001b[39m(\u001b[38;5;28mself\u001b[39m, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m--> 762\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_event\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\threading.py:574\u001b[0m, in \u001b[0;36mEvent.wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    572\u001b[0m signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_flag\n\u001b[0;32m    573\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m signaled:\n\u001b[1;32m--> 574\u001b[0m     signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cond\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    575\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m signaled\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\threading.py:312\u001b[0m, in \u001b[0;36mCondition.wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    310\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:    \u001b[38;5;66;03m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[0;32m    311\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 312\u001b[0m         \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    313\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    314\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [85]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m lindx \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m \u001b[43mstrokes_and_wavelets\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlindx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprojections\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [84]\u001b[0m, in \u001b[0;36mstrokes_and_wavelets\u001b[1;34m(indx, projections)\u001b[0m\n\u001b[0;32m     10\u001b[0m ax1 \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplot2grid((rows, \u001b[38;5;241m2\u001b[39m), (i, \u001b[38;5;241m0\u001b[39m))\n\u001b[0;32m     11\u001b[0m ax2 \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplot2grid((rows, \u001b[38;5;241m2\u001b[39m), (i, \u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m---> 12\u001b[0m \u001b[43mplot_stroke\u001b[49m(indx[i], ax1)\n\u001b[0;32m     13\u001b[0m plot_wavelet(ax2, wlet, freq)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plot_stroke' is not defined"
      ]
     },
     {
